prometheus/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-devops
  name: grafana
  labels:
    name: grafana
spec:
  type: ClusterIP #这里代表是NodePort类型的
  ports:
    - port: 80 #这里的端口和clusterIP 对应，即80,供内部访问。
      targetPort: 3000 #端口一定要和container暴露出来的端口对应，nodejs暴露出来的端口是8081，所以这里也应是8081
      protocol: TCP
  selector:
    app: grafana #这里选择器一定要选择容器的标签，之前写name:kube-node是错的。
